--- a/package.json
+++ b/package.json
@@ -11,10 +11,11 @@
     "electron-is-dev": "^1.0.1",
     "electron-updater": "^4.0.6",
     "fs": "0.0.1-security",
-    "minecraft-launcher-core": "^1.2.1",
+    "minecraft-launcher-core": "^2.3.1",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
     "react-scripts": "^2.1.8",
+    "request": "^2.88.0",
     "typescript": "^3.3.3333"
   },
   "repository": "https://github.com/stonybrookMCC/launcher",
